--- a/src/feed/htaccess.njk
+++ b/src/feed/htaccess.njk
@@ -1,5 +1,4 @@
 ---
-permalink: /feed/.htaccess
-eleventyExcludeFromCollections: true
+permalink: "/{{ lang }}/feed/.htaccess"
 ---
 DirectoryIndex feed.xml
