--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  {% if not description %}
+    {% set description = metadata.description %}
+  {% endif %}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ɴɴBlog | {{ title }}</title>
-  <meta name="description" content="{{ description or metadata.description }}" />
+  <title>ɴɴBlog | {{ title | langString(lang) }}</title>
+  <meta name="description" content="{{ description | langString(lang) }}" />
   <link rel="icon" href="https://avatars.githubusercontent.com/u/43980777" />
   <meta property="og:site_name" content="ɴɴBlog" />
-  <meta property="og:title" content="{{ title }}" />
-  <meta property="og:description" content="{{ description or metadata.description }}" />
+  <meta property="og:title" content="{{ title | langString(lang) }}" />
+  <meta property="og:description" content="{{ description | langString(lang) }}" />
   <meta property="og:image" content="{% img image %}" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{ page.url | url }}" />
-  <meta property="og:locale" content="{# #TODO #}" />
-  <meta property="og:locale:alternate" content="{# #TODO #}" />
+  <meta property="og:locale" content="{{ lang }}" />
+  <meta property="og:locale:alternate" content="{% if lang == 'vi' %}en{% else %}vi{% endif %}" />
   {% if layout == "layouts/post.njk" %}
     <meta property="article:author" content="{{ metadata.author.name }}" />
     <meta property="article:published_time" content="{{ date.toISOString() }}" />
