--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -9,9 +9,9 @@ layout: layouts/default.njk
   <div class="hero-overlay bg-opacity-75 shadow-inner"></div>
   <div class="hero-content text-center">
     <div class="my-16">
-      <h1 class="text-2xl sm:text-4xl font-bold">{{ title }}</h1>
+      <h1 class="text-2xl sm:text-4xl font-bold">{{ title | langString(lang) }}</h1>
       {% if description %}
-        <p class="mt-4 sm:text-lg font-semibold">{{ description }}</p>
+        <p class="mt-4 sm:text-lg font-semibold">{{ description | langString(lang) }}</p>
       {% endif %}
     </div>
     <div
