--- a/src/feed/json.njk
+++ b/src/feed/json.njk
@@ -1,11 +1,10 @@
 ---
-permalink: /feed.json
-eleventyExcludeFromCollections: true
+permalink: "/{{ lang }}/feed.json"
 ---
 {
   "version": "https://jsonfeed.org/version/1.1",
   "title": "{{ metadata.title }}",
-  "language": "{{ metadata.language }}",
+  "language": "{{ lang }}",
   "home_page_url": "{{ metadata.url }}",
   "feed_url": "{{ permalink | url(metadata.url) }}",
   "description": "{{ metadata.description }}",
