--- a/src/feed/rss.njk
+++ b/src/feed/rss.njk
@@ -1,6 +1,5 @@
 ---
-permalink: /feed.rss
-eleventyExcludeFromCollections: true
+permalink: "/{{ lang }}/feed.rss"
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
@@ -9,7 +8,7 @@ eleventyExcludeFromCollections: true
     <link>{{ metadata.url }}</link>
     <atom:link href="{{ permalink | url(metadata.url) }}" rel="self" type="application/rss+xml" />
     <description>{{ metadata.description }}</description>
-    <language>{{ metadata.language }}</language>
+    <language>{{ lang }}</language>
     {%- for post in collections.posts | reverse %}
     {%- set postUrl = post.url | url(metadata.url) %}
     <item>
