I gave up on 11ty's new i18n!!!

--- a/src/_includes/feed/json.njk
+++ b/src/_includes/feed/json.njk
@@ -1,12 +1,9 @@
----
-permalink: "/{{ lang }}/feed.json"
----
 {
   "version": "https://jsonfeed.org/version/1.1",
   "title": "{{ metadata.title }}",
   "language": "{{ lang }}",
   "home_page_url": "{{ metadata.url }}",
-  "feed_url": "{{ permalink | url(metadata.url) }}",
+  "feed_url": "{{ permalink | locale_url(metadata.url) }}",
   "description": "{{ metadata.description }}",
   "author": {
     "name": "{{ metadata.author.name }}",
@@ -14,7 +11,7 @@ permalink: "/{{ lang }}/feed.json"
   },
   "items": [
     {%- for post in collections.posts | reverse %}
-    {%- set postUrl = post.url | url(metadata.url) %}
+    {%- set postUrl = post.url | locale_url(metadata.url) %}
     {
       "id": "{{ postUrl }}",
       "url": "{{ postUrl }}",
