--- a/src/_includes/home/tags.njk
+++ b/src/_includes/home/tags.njk
@@ -1,5 +1,5 @@
 {% for tag in collections.tags | sort %}
-  {% set tagUrl %}/{{ lang }}/tags/{{ tag | slugify }}/{% endset %}
+  {% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
   <a class="tag btn btn-cool btn-secondary" href="{{ tagUrl | url }}">
     #{{ tag }}
   </a>
