--- a/src/_includes/page/home.njk
+++ b/src/_includes/page/home.njk
@@ -1,14 +1,6 @@
 ---
-layout: layouts/home.njk
-pagination:
-  data: metadata.languages
-  size: 1
-  alias: lang
-title:
-  en: Home
-  vi: Trang chủ
+layout: layouts/list.njk
 image: https://images.unsplash.com/photo-1570366583862-f91883984fde
-permalink: "/{{ lang }}/"
 ---
 
 <div class="hero-content flex-col md:flex-row md:gap-8 lg:gap-16">
