--- a/src/404.njk
+++ b/src/404.njk
@@ -16,7 +16,7 @@ permalink: 404.html
     <h1 class="text-9xl font-mono font-black">404</h1>
     <p class="text-xl">Content not found</p>
   </div>
-  <a class="btn btn-outline btn-secondary gap-2" href="{{ '/' | url }}">
+  <a class="btn btn-outline btn-secondary gap-2" href="{{ '/' | locale_url }}">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path fill-rule="evenodd" d="M9.53 2.47a.75.75 0 010 1.06L4.81 8.25H15a6.75 6.75 0 010 13.5h-3a.75.75 0 010-1.5h3a5.25 5.25 0 100-10.5H4.81l4.72 4.72a.75.75 0 11-1.06 1.06l-6-6a.75.75 0 010-1.06l6-6a.75.75 0 011.06 0z" clip-rule="evenodd" /></svg>
     Back to Home
   </a>
