--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -4,14 +4,16 @@ layout: layouts/default.njk
 
 <header
   class="hero min-h-[20rem] relative"
-  style="background-image: url({% img image, 240 %});"
+  {% if image %}
+    style="background-image: url({% img image, 240 %});"
+  {% endif %}
 >
   <div class="hero-overlay bg-opacity-75 shadow-inner"></div>
   <div class="hero-content text-center">
     <div class="my-16">
-      <h1 class="text-2xl sm:text-4xl font-bold">{{ title | langString(lang) }}</h1>
+      <h1 class="text-2xl sm:text-4xl font-bold">{{ title }}</h1>
       {% if description %}
-        <p class="mt-4 sm:text-lg font-semibold">{{ description | langString(lang) }}</p>
+        <p class="mt-4 sm:text-lg font-semibold">{{ description }}</p>
       {% endif %}
     </div>
     <div
