--- a/src/en/tags.njk
+++ b/src/en/tags.njk
@@ -1,5 +1,5 @@
 ---
-layout: layouts/tag.njk
+layout: page/tag.njk
 pagination:
   data: collections
   size: 1
@@ -12,6 +12,6 @@ pagination:
   addAllPagesToCollections: true
 eleventyComputed:
   title: "#{{ tag }}"
-  description: "{{ tags_data[ tag | slugify ].description | langString(lang) }}"
+  description: "{{ tags_data[ tag | slugify ].description[ lang ] }}"
   image: "{{ tags_data[ tag | slugify ].image }}"
-permalink: "/{{ lang }}/tags/{{ tag | slugify }}/"
+permalink: "{{ page.lang }}/tags/{{ tag | slugify }}/"
