--- a/src/_includes/post/tags.njk
+++ b/src/_includes/post/tags.njk
@@ -1,6 +1,6 @@
-{% for tag in tags | filterTags %}
-  {% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
-  <a class="link-mono" href="{{ tagUrl | url }}">
-    #{{ tag }}
-  </a>
+{% for tag in tags | filter_tags %}
+  <a
+    class="link-mono"
+    href="{{ ('/' ~ lang ~ '/tags/' ~ ( tag | slugify ) ~ '/') | url }}"
+  >#{{ tag }}</a>
 {% endfor %}
