Fixed most of i18n stuff...

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
+{% set lang = lang or 'en' %}
 <html lang="{{ lang }}">
 <head>
-  {% if not description %}
-    {% set description = metadata.description %}
-  {% endif %}
+  {% set description = description or metadata.description %}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ɴɴBlog | {{ title }}</title>
-  <meta name="description" content="{{ description }}" />
+  <title>ɴɴBlog | {{ title | lang_string(lang) }}</title>
+  <meta name="description" content="{{ description | lang_string(lang) }}" />
   <link rel="icon" href="https://avatars.githubusercontent.com/u/43980777" />
   <meta property="og:site_name" content="ɴɴBlog" />
-  <meta property="og:title" content="{{ title }}" />
-  <meta property="og:description" content="{{ description }}" />
+  <meta property="og:title" content="{{ title | lang_string(lang) }}" />
+  <meta property="og:description" content="{{ description | lang_string(lang) }}" />
   {% if image %}
     <meta property="og:image" content="{% img image %}" />
   {% endif %}
