--- a/src/page/home.njk
+++ b/src/page/home.njk
@@ -1,6 +1,10 @@
 ---
-layout: layouts/list.njk
+layout: layouts/home.njk
+title:
+  en: Home
+  vi: Trang chủ
 image: https://images.unsplash.com/photo-1570366583862-f91883984fde
+permalink: "/{{ lang }}/"
 ---
 
 <div class="hero-content flex-col md:flex-row md:gap-8 lg:gap-16">
