--- a/src/feed/rss.njk
+++ b/src/feed/rss.njk
@@ -1,13 +1,16 @@
+---
+permalink: "/{{ lang }}/feed.rss"
+---
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
     <title>{{ metadata.title }}</title>
     <link>{{ metadata.url }}</link>
-    <atom:link href="{{ permalink | locale_url(metadata.url) }}" rel="self" type="application/rss+xml" />
+    <atom:link href="{{ permalink | url(metadata.url) }}" rel="self" type="application/rss+xml" />
     <description>{{ metadata.description }}</description>
     <language>{{ lang }}</language>
     {%- for post in collections.posts | reverse %}
-    {%- set postUrl = post.url | locale_url(metadata.url) %}
+    {%- set postUrl = post.url | url(metadata.url) %}
     <item>
       <title>{{ post.data.title }}</title>
       <link>{{ postUrl }}</link>
