--- a/src/home.njk
+++ b/src/home.njk
@@ -1,5 +1,9 @@
 ---
 layout: layouts/home.njk
+pagination:
+  data: metadata.languages
+  size: 1
+  alias: lang
 title:
   en: Home
   vi: Trang chủ
