--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-{% set lang = lang or 'en' %}
-<html lang="{{ lang }}">
+{% set meta_lang = lang or 'en' %}
+<html lang="{{ meta_lang }}">
 <head>
   {% set description = description or metadata.description %}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ɴɴBlog | {{ title | lang_string(lang) }}</title>
-  <meta name="description" content="{{ description | lang_string(lang) }}" />
+  <title>ɴɴBlog{% if title %} | {{ title | lang_string }}{% endif %}</title>
+  <meta name="description" content="{{ description | lang_string }}" />
   <link rel="icon" href="https://avatars.githubusercontent.com/u/43980777" />
   <meta property="og:site_name" content="ɴɴBlog" />
-  <meta property="og:title" content="{{ title | lang_string(lang) }}" />
-  <meta property="og:description" content="{{ description | lang_string(lang) }}" />
+  <meta property="og:title" content="{{ title | lang_string }}" />
+  <meta property="og:description" content="{{ description | lang_string }}" />
   {% if image %}
     <meta property="og:image" content="{% img image %}" />
   {% endif %}
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{ page.url | url }}" />
-  <meta property="og:locale" content="{{ lang }}" />
-  <meta property="og:locale:alternate" content="{% if lang == 'vi' %}en{% else %}vi{% endif %}" />
+  <meta property="og:locale" content="{{ meta_lang }}" />
+  <meta property="og:locale:alternate" content="{% if meta_lang == 'vi' %}en{% else %}vi{% endif %}" />
   {% if layout == "layouts/post.njk" %}
     <meta property="article:author" content="{{ metadata.author.name }}" />
     <meta property="article:published_time" content="{{ date.toISOString() }}" />
