--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,7 +2,7 @@
 layout: layouts/default.njk
 ---
 
-<div class="home backdrop-blur min-h-screen bg-base-100 bg-opacity-60">
+<div class="home min-h-screen backdrop-blur bg-base-100 bg-opacity-60">
   <header class="hero pt-16 min-h-[20rem] lg:min-h-[24rem]">
     {{ content | safe }}
   </header>
