--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -28,7 +28,7 @@ layout: layouts/default.njk
           data-emit-metadata="0"
           data-input-position="top"
           data-theme="dark_dimmed"
-          data-lang="en"
+          data-lang="{{ lang }}"
           data-loading="lazy"
           crossorigin="anonymous"
           async
