--- a/src/_includes/post/header.njk
+++ b/src/_includes/post/header.njk
@@ -7,9 +7,9 @@
   <div class="hero-overlay bg-opacity-75 shadow-inner"></div>
   <div class="hero-content text-center">
     <div class="my-16">
-      <h1 class="text-2xl sm:text-4xl font-bold">{{ title | lang_string(lang) }}</h1>
+      <h1 class="text-2xl sm:text-4xl font-bold">{{ title | lang_string }}</h1>
       {% if description %}
-        <p class="mt-4 sm:text-lg font-semibold">{{ description | lang_string(lang) }}</p>
+        <p class="mt-4 sm:text-lg font-semibold">{{ description | lang_string }}</p>
       {% endif %}
     </div>
     <div
