--- a/src/home.njk
+++ b/src/home.njk
@@ -16,7 +16,7 @@ permalink: "/{{ lang }}/"
     <img
       class="
         w-48 lg:w-64 aspect-square bg-base-100
-        rounded-box duration-200 outline outline-2 outline-primary shadow-xl
+        rounded-3xl duration-200 outline outline-2 outline-primary shadow-xl
         hover:scale-110 hover:rotate-6 hover:outline-8 hover:shadow-2xl
       "
       src="https://avatars.githubusercontent.com/u/43980777"
