Added home header's image cool hover effect

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -36,6 +36,7 @@
   <style>
     {{ css | postcss | safe }}
   </style>
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body
   class="bg-fixed bg-cover bg-center"
