--- a/src/home.njk
+++ b/src/home.njk
@@ -11,41 +11,74 @@ image: https://images.unsplash.com/photo-1570366583862-f91883984fde
 permalink: "/{{ lang }}/"
 ---
 
-<div class="hero-content flex-col md:flex-row md:gap-8 lg:gap-16">
-  <a href="https://NNBnh.github.io">
+{% macro hover(over, away) %}
+  :class="imageHover ? '{{ over }}' : '{{ away }}'"
+{% endmacro %}
+
+<div
+  x-data="{ imageHover: false }"
+  class="
+    hero-content flex-col md:flex-row md:gap-8 lg:gap-16
+    duration-200 origin-[6rem_50%] lg:origin-[8rem_50%]
+  "
+  {{ hover('md:rotate-6') }}
+>
+  <a
+    href="https://NNBnh.github.io"
+    @mouseover="imageHover = true"
+    @mouseover.away="imageHover = false"
+  >
     <img
       class="
         w-48 lg:w-64 aspect-square bg-base-100
         rounded-3xl duration-200 outline outline-2 outline-primary shadow-xl
-        hover:scale-110 hover:rotate-6 hover:outline-8 hover:shadow-2xl
+        hover:scale-110 hover:rotate-6 md:hover:rotate-0 hover:outline-8 hover:shadow-2xl
       "
       src="https://avatars.githubusercontent.com/u/43980777"
     />
   </a>
   <div class="flex flex-col items-center md:items-start gap-4">
-    <h1 class="text-4xl lg:text-6xl font-bold">{{ metadata.author.name }}'s Blog</h1>
-    <p class="py-2 text-xl font-semibold italic">{{ metadata.description }}</p>
+    <h1
+      class="text-4xl lg:text-6xl font-bold duration-200 origin-left"
+      {{ hover('md:scale-150') }}
+    >
+      <span class="duration-200" {{ hover('md:text-accent md:font-black') }}>
+        {{ metadata.author.name -}}
+      </span><span
+        class="duration-200" {{ hover('md:opacity-10 md:font-thin') }}
+      >'s Blog</span>
+    </h1>
+    <p
+      class="py-2 text-xl font-semibold italic origin-left relative duration-200"
+      {{ hover('md:scale-125') }}
+    >
+      <span class="duration-200" {{ hover('md:opacity-0', '') }}>
+        {{ metadata.description }}
+      </span>
+      <span
+        class="absolute top-2 hidden md:inline duration-200 opacity-0 text-secondary"
+        {{ hover('md:opacity-100', '') }}
+      >{{ metadata.author.description }}</span>
+    </p>
     <div class="flex gap-4">
-      <a class="btn btn-cool btn-primary" href="https://NNBnh.github.io">
-        {% if lang == 'vi' %}
-          Giới thiệu
-        {% else %}
-          About Me
-        {% endif %}
+      <span class="origin-top-left duration-200" {{ hover('md:scale-125') }}>
+        <a class="btn btn-cool btn-primary" href="https://NNBnh.github.io">
+          {% if lang == 'vi' %}Giới thiệu{% else %}About Me{% endif %}
+        </a>
+      </span>
+      <a
+        class="btn btn-cool btn-secondary"
+        {{ hover('md:translate-x-6 md:opacity-10') }}
+        href="https://github.com/NNBnh"
+      >
+        {% if lang == 'vi' %}Các dự án{% else %}My Projects{% endif %}
       </a>
-      <a class="btn btn-cool btn-secondary" href="https://github.com/NNBnh">
-        {% if lang == 'vi' %}
-          Các dự án
-        {% else %}
-          My Projects
-        {% endif %}
-      </a>
-      <a class="btn btn-cool btn-accent" href="https://NNBnh.itch.io">
-        {% if lang == 'vi' %}
-          Các game
-        {% else %}
-          My Games
-        {% endif %}
+      <a
+        class="btn btn-cool btn-accent"
+        {{ hover('md:translate-x-6 md:opacity-10') }}
+        href="https://NNBnh.itch.io"
+      >
+        {% if lang == 'vi' %}Các game{% else %}My Games{% endif %}
       </a>
     </div>
   </div>
