--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -31,4 +31,12 @@
   </div>
   <p>Copyright &copy; 2022 - {{ build.date.getFullYear() }}</p>
 </footer>
-{# #FIXME <a class="hover:text-primary hover:text-secondary hover:text-accent hover:text-info hover:text-success hover:text-warning hover:text-error"></a> #}
+
+{# #FIXME
+  <a class="hover:text-primary"></a>
+  <a class="hover:text-secondary"></a>
+  <a class="hover:text-accent"></a>
+  <a class="hover:text-info"></a>
+  <a class="hover:text-warning"></a>
+  <a class="hover:text-error"></a>
+#}
