--- a/src/_includes/home/posts.njk
+++ b/src/_includes/home/posts.njk
@@ -21,7 +21,7 @@
       </div>
       <a
         class="
-          card-title h-full items-center justify-center text-center
+          card-title h-full items-center justify-center text-center font-serif
           duration-200 group-hover:-rotate-6 group-hover:scale-110
           group-hover:font-black hover:text-primary
         "
