--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -2,7 +2,7 @@
 layout: layouts/home.njk
 ---
 
-<div class="hero-content text-center">
+<div class="hero-content text-center font-serif">
   <div class="my-8">
     <a
       class="text-4xl sm:text-6xl font-mono font-bold duration-200 hover:text-accent"
