--- a/src/_includes/post/header.njk
+++ b/src/_includes/post/header.njk
@@ -1,7 +1,7 @@
 <header
-  class="hero min-h-[20rem] relative"
+  class="hero min-h-[20rem] font-serif relative"
   {% if image %}
-    style="background-image: url({% img image, 240 %});"
+    style="background-image: url({% img image, 1280 %});"
   {% endif %}
 >
   <div class="hero-overlay bg-opacity-75 shadow-inner"></div>
