--- a/src/home.njk
+++ b/src/home.njk
@@ -12,21 +12,22 @@ permalink: "/{{ lang }}/"
 ---
 
 {% macro hover(over, away) %}
-  :class="imageHover ? '{{ over }}' : '{{ away }}'"
+  :class="authorHover ? '{{ over }}' : '{{ away }}'"
 {% endmacro %}
 
 <div
-  x-data="{ imageHover: false }"
+  x-data="{ authorHover: false }"
   class="
-    hero-content flex-col md:flex-row md:gap-8 lg:gap-16
+    hero-content flex-col md:flex-row md:gap-8 lg:gap-16 font-serif
     duration-200 origin-[6rem_50%] lg:origin-[8rem_50%]
   "
   {{ hover('md:rotate-6') }}
 >
   <a
     href="https://NNBnh.github.io"
-    @mouseover="imageHover = true"
-    @mouseover.away="imageHover = false"
+    aria-label="About Me"
+    @mouseover="authorHover = true"
+    @mouseover.away="authorHover = false"
   >
     <img
       class="
@@ -35,11 +36,12 @@ permalink: "/{{ lang }}/"
         hover:scale-110 hover:rotate-6 md:hover:rotate-0 hover:outline-8 hover:shadow-2xl
       "
       src="https://avatars.githubusercontent.com/u/43980777"
+      alt="About Me"
     />
   </a>
   <div class="flex flex-col items-center md:items-start gap-4">
     <h1
-      class="text-4xl lg:text-6xl font-bold duration-200 origin-left"
+      class="text-4xl md:text-6xl font-bold duration-200 origin-left"
       {{ hover('md:scale-150') }}
     >
       <span class="duration-200" {{ hover('md:text-accent md:font-black') }}>
@@ -68,14 +70,14 @@ permalink: "/{{ lang }}/"
       </span>
       <a
         class="btn btn-cool btn-secondary"
-        {{ hover('md:translate-x-6 md:opacity-10') }}
+        {{ hover('md:translate-x-6 md:-translate-y-2 md:opacity-10') }}
         href="https://github.com/NNBnh"
       >
         {% if lang == 'vi' %}Các dự án{% else %}My Projects{% endif %}
       </a>
       <a
         class="btn btn-cool btn-accent"
-        {{ hover('md:translate-x-6 md:opacity-10') }}
+        {{ hover('md:scale-75 md:translate-x-2 md:-translate-y-5 md:opacity-10') }}
         href="https://NNBnh.itch.io"
       >
         {% if lang == 'vi' %}Các game{% else %}My Games{% endif %}
