--- a/src/index.njk
+++ b/src/index.njk
@@ -12,8 +12,8 @@ image: https://images.unsplash.com/photo-1638793774237-0fd6b45a510f
   {% for language_code, language_name in metadata.languages %}
     <a
       class="
-        w-80 duration-200 hover:scale-125 hover:rotate-6 drop-shadow
-        text-center text-5xl sm:text-6xl font-thin hover:font-bold hover:text-primary
+        w-80 drop-shadow duration-200 hover:scale-125 hover:rotate-6 hover:text-primary
+        text-center text-5xl sm:text-6xl font-serif font-extralight hover:font-bold
       "
       href="{{ '/' | to_lang(language_code) | url }}"
     >{{ language_name }}</a>
