--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -3,7 +3,7 @@
     {% for social in footer.socials %}
       <a
         class="
-          duration-200 hover:scale-150 hover:-rotate-6 hover:-translate-y-1
+          duration-200 hover:scale-150 hover:rotate-6 hover:-translate-y-1
           drop-shadow hover:drop-shadow-xl hover:text-{{ social.color }}
         "
         aria-label="{{ social.name }}"
