--- a/src/_includes/home/posts.njk
+++ b/src/_includes/home/posts.njk
@@ -2,13 +2,13 @@
   <article
     class="
       card card-compact image-full mt-8 max-w-sm bg-base-100
-      group duration-200 outline outline-2 outline-primary shadow-xl
+      group duration-200 outline outline-2 outline-secondary shadow-xl
       hover:z-20 hover:scale-105 hover:rotate-3 hover:outline-8 hover:shadow-2xl
     "
   >
     <figure>
       <img
-        class="aspect-[2/1] duration-200 group-hover:blur"
+        class="w-96 aspect-[2/1] duration-200 group-hover:blur"
         src="{% img post.data.image, 480 %}"
         alt="Thumbnail"
       />
@@ -21,15 +21,15 @@
       </div>
       <a
         class="
-          card-title h-full items-center justify-center text-center font-serif
+          card-title px-4 h-full items-center justify-center
           duration-200 group-hover:-rotate-6 group-hover:scale-110
-          group-hover:font-black hover:text-primary
+          text-center font-serif font-black hover:text-secondary
         "
         href="{{ post.url | to_lang | url }}"
       >
         <h2>{{ post.data.title | lang_string }}</h2>
       </a>
-      <div class="card-actions justify-end text-sm sm:text-md">
+      <div class="card-actions min-h-[1.25rem] justify-end text-sm sm:text-md">
         {% set tags = post.data.tags %}
         {% include "post/tags.njk" %}
       </div>
