--- a/src/_includes/post/tags.njk
+++ b/src/_includes/post/tags.njk
@@ -1,6 +1,6 @@
 {% for tag in tags | filter_tags %}
   <a
     class="link-mono"
-    href="{{ ('/tags/' ~ ( tag | slugify ) ~ '/') | to_lang | url }}"
+    href="{{ ('/tags/' ~ tag ~ '/') | to_lang | url }}"
   >#{{ tag }}</a>
 {% endfor %}
