Added "Become a Hackerman"

--- a/src/404.njk
+++ b/src/404.njk
@@ -8,7 +8,7 @@ permalink: 404.html
 
 <div
   class="
-    min-h-[calc(100vh-12rem)] bg-base-100 bg-opacity-75
+    min-h-body bg-base-100 bg-opacity-75
     flex flex-col items-center justify-center gap-16
   "
 >
