--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -43,8 +43,6 @@
     rel="stylesheet"
   />
   <link href="https://fonts.googleapis.com/css?family=JetBrains+Mono&display=swap" rel="stylesheet" />
-  <script>{% include "node_modules/alpinejs/dist/cdn.js" %}</script>
-</head>
 <body
   class="bg-fixed bg-cover bg-center"
   {% if image %}
@@ -74,4 +72,8 @@
     </div>
   </div>
 </body>
+</head>
+{% if alpine %}
+  <script defer>{% include "node_modules/alpinejs/dist/cdn.js" %}</script>
+{% endif %}
 </html>
