--- a/src/_includes/post/header.njk
+++ b/src/_includes/post/header.njk
@@ -22,7 +22,7 @@
       <a href="{{ path | url }}">
         {% include "post/date.njk" %}
       </a>
-      <p class="md:text-right">
+      <p class="md:text-right font-mono">
         {% include "post/tags.njk" %}
       </p>
     </div>
