--- a/src/home.njk
+++ b/src/home.njk
@@ -8,6 +8,7 @@ title:
   en: Home
   vi: Trang chủ
 image: https://images.unsplash.com/photo-1570366583862-f91883984fde
+alpine: true
 permalink: "/{{ lang }}/"
 ---
 
