--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ image: https://images.unsplash.com/photo-1638793774237-0fd6b45a510f
 
 <div
   class="
-    min-h-[calc(100vh-12rem)] backdrop-blur bg-base-100 bg-opacity-60
+    min-h-body backdrop-blur bg-base-100 bg-opacity-60
     flex flex-col md:flex-row items-center justify-center gap-16
   "
 >
