--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ɴɴBlog{% if title %} | {{ title | lang_string }}{% endif %}</title>
   <meta name="description" content="{{ description }}" />
-  <link rel="icon" href="https://avatars.githubusercontent.com/u/43980777" />
+  <link rel="icon" href="https://codeberg.org/NNB/pages/raw/branch/master/static/favicon.ico" />
 
   <meta property="og:site_name" content="ɴɴBlog" />
   <meta property="og:title" content="{{ title | lang_string }}" />
