modified:   src/_data/metadata.yaml 	modified:   src/home.njk

--- a/src/home.njk
+++ b/src/home.njk
@@ -36,7 +36,7 @@ permalink: "/{{ lang }}/"
         rounded-3xl duration-200 outline outline-2 outline-primary shadow-xl
         hover:scale-110 hover:rotate-6 md:hover:rotate-0 hover:outline-8 hover:shadow-2xl
       "
-      src="https://avatars.githubusercontent.com/u/43980777"
+      src="https://codeberg.org/avatars/46ce1f9c36aeaf725cc13b3e99735120"
       alt="About Me"
     />
   </a>
@@ -75,7 +75,7 @@ permalink: "/{{ lang }}/"
       <a
         class="btn btn-cool btn-secondary"
         {{ hover('md:translate-x-6 md:-translate-y-2 md:opacity-10') }}
-        href="https://github.com/NNBnh"
+        href="https://codeberg.org/NNB"
       >
         {% if lang == 'vi' %}Các dự án{% else %}My Projects{% endif %}
       </a>
