--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -22,7 +22,8 @@ layout: layouts/default.njk
           data-repo-id="R_kgDOImRM7Q"
           data-category="Comments"
           data-category-id="DIC_kwDOImRM7c4CTBWV"
-          data-mapping="pathname"
+          data-mapping="specific"
+          data-term="Blog post No.{{ page.fileSlug }}"
           data-strict="0"
           data-reactions-enabled="1"
           data-emit-metadata="0"
